@@ -3,5 +3,6 @@ AM_CXXFLAGS = -Wreturn-type -ffast-math $(CXX_CPU_SWITCH)
 METASOURCES = AUTO
 SUBDIRS = gig common
 noinst_LTLIBRARIES = liblinuxsamplerengines.la
-noinst_HEADERS = EngineChannelFactory.h EngineFactory.h
-liblinuxsamplerengines_la_SOURCES = EngineChannelFactory.cpp EngineFactory.cpp
+liblinuxsamplerengines_la_SOURCES = \
+	EngineFactory.cpp EngineFactory.h \
+	EngineChannelFactory.cpp EngineChannelFactory.h
